@@ -1,0 +1,4 @@
+initial_area= 0x........
+area= 0x........
+increased area= 0x........
+Hello World
